--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,47 @@
+html {
+  background: url(../img/IMG_0742.jpg) no-repeat center center fixed;
+  background-size: cover;
+}
+
 body {
   font-family: sans-serif;
-  background-color: red;
+}
+
+h3 {
+	height: 4px;
+	text-decoration: bold;
+}
+
+#name {
+	width: 400px;
+	height: 30px;
+	padding-left: 150px;
+	padding-top: 20px;
+	color: white;
+	text-align: justify;
+}
+
+#bio {
+	width: 200px;
+	height: 200px;
+	padding-left: 150px;
+	padding-top: 20px;
+	color: white;
+	text-align: justify;
+	float: left;
+}
+
+#interests {
+	text-decoration: none;
+	color: white;
+	float: left;
+	padding-top: 20px;
+	padding-left: 50px;
+}
+
+#edu {
+	text-decoration: none;
+	color: white;
+	float: left;
+	padding-top: 20px;
 }
