--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,7 @@
-
+html {
+  background: url(../img/IMG_0742.jpg) no-repeat center center fixed;
+  background-size: cover;
+}
 
 body {
   font-family: sans-serif;
