case sensitive fix jpg

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,5 @@
 html {
-  background: url(../img/IMG_0742.jpg) no-repeat center center fixed;
+  background: url(../img/IMG_0742.JPG) no-repeat center center fixed;
   background-size: cover;
 }
 
